[package]
name = "vincenty-yew"
version = "0.1.0"
authors = ["Rahul Garg <rg@vihu.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
js-sys = "0.3.46"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["wasmbind"] }
anyhow = "1.0.53"
yew = "0.19.3"
